pictures added to thebellos

--- a/thebellos18.html
+++ b/thebellos18.html
@@ -48,7 +48,7 @@
     <style>
     
         .ww-home-page {
-          background: url("img/ww.jpg") no-repeat center center;
+          background: url("https://res.cloudinary.com/dioamq4tm/image/upload/v1541160378/6F1CBF4D-CFE3-43F8-BE3C-384BDD0AE466_qxn6oc.jpg") no-repeat center center;
           background-size: cover;
           background-position: 70%;
           height: 100vh;
